Update and rename 2019-03-14-java-연산자1.md to 2019-03-14-java-연산자.md

--- a/_posts/2019-03-14-java-연산자.md
+++ b/_posts/2019-03-14-java-연산자.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 자바 연산자(1)
+title: 자바 연산자
 categories: [Java]
 tags: [Java]
 description: 자바의 연산자에 대해 알아보자
@@ -29,7 +29,7 @@ comments: true
   ~~~java
   public class OperatorEx {
           public static void main(String[] args) {
-              int i = 3, j = 0;
+              int i = 5, j = 0;
               j = i++;
               System.out.println("j=i++ 실행후 i=" + i + "j=" + j);
               
@@ -39,5 +39,11 @@ comments: true
               System.out.println("j=++i 실행후 i=" + i + "j=" + j);
           }
   }
-  ~~~
+  ~~~  
+  실행결과  
+  ![operator](https://user-images.githubusercontent.com/36055500/54478873-67f6e100-485a-11e9-8a1c-f3f858983100.JPG)  
+  실행결과를 보면 i의 값은 모두 1이 증가되어 6이지만, j의 값은 서로 다르다. 이유는 첫번째 후위형의 경우 변수의 값을 먼저 읽어온 후에 값을 증가시키는 반면 두번째 전위형의 경우는 변수의 값을 먼저 증가시킨후 변수의 값을 읽어오기 때문이다.  
+  <br>
+  * ### 2. 부호 연산자 + -  
+  부호 연산자 '-'는 피연산자의 부호를 반대로 변경한 결과를 변환한다. 따라서 피연산자가 음수면 양수, 양수면 음수가 연산의 결과가 된다.
   
