--- a/_posts/2019-03-14-java-연산자2.md
+++ b/_posts/2019-03-14-java-연산자2.md
@@ -18,6 +18,7 @@ comments: true
   * ### 2. 등가비교 연산자  
   피연산자의 값이 같은지 다른지를 비교하는 연산자이다. 모든 자료형에 사용할 수 있다.  
   <center><img src="https://user-images.githubusercontent.com/36055500/54488504-bb624100-48e5-11e9-8dda-236d1364d98e.JPG"></center>  
+  zzz
   
   
   
