--- a/_posts/2019-05-01-java-객체지향10.md
+++ b/_posts/2019-05-01-java-객체지향10.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 객체지향 프로그래밍(9)
+title: 객체지향 프로그래밍(10)
 categories: [Object-Oriented Programming]
 tags: [Java, Object-Oriented Programming]
 description: 객체지향 프로그래밍에 대해 알아보자
@@ -43,7 +43,11 @@ class Test1 extends AbstractClass {
 
 abstract class Test2 extends AbstractClass {
 	void method1(int x) { // ... } // 추상메서드 구현
-}  
+}
+~~~  
+메서드를 작성할 때 실제 작업내용인 구현부보다 더 중요한것이 선언부이기 때문에, 실제 작업내용인 구현부가 없더라도 의미는 충분히 있다.
 <br>  
+### 3. 추상클래스의 작성  
+
 
 
