Update and rename 2019-05-25-java-.md to 2019-05-25-java-lang패키지.md

--- a/_posts/2019-05-25-java-lang패키지.md
+++ b/_posts/2019-05-25-java-lang패키지.md
@@ -60,4 +60,32 @@ class Main {
 	}
 }
 ~~~  
-위 예제의 결과는 true, 96354, 96354이다. String 클래스는 문자열의 내용이 같으면 동일한 해시코드를 반환하도록 hashCode메서드가 오버라이딩 되어 있기 때문에, 문자열의 내용이 같은 s1과 s2에 대해 hashCode()를 호출하면 항상 동일한 해시코드값을 얻는다.
+위 예제의 결과는 true, 96354, 96354이다. String 클래스는 문자열의 내용이 같으면 동일한 해시코드를 반환하도록 hashCode메서드가 오버라이딩 되어 있기 때문에, 문자열의 내용이 같은 s1과 s2에 대해 hashCode()를 호출하면 항상 동일한 해시코드값을 얻는다.  
+<br>  
+**toString()**  
+이 메서드는 인스턴스에 대한 정보를 문자열로 제공할 목적으로 정의한 것인데, 인스턴스의 정보를 제공한다는 것은 대부분의 경우 인스턴스 변수에 저장된 값들을 문자열로 표현한다는 뜻이다.  
+~~~java
+class Main {
+	public static void main(String[] args) {
+		Number n1 = new Number();
+		Number n2 = new Number();
+		
+		System.out.println(n1.toString());
+		System.out.println(n2.toString());
+	}
+}
+
+class Number {
+	int number;
+	String type;
+	
+	Number() {
+		this(10, "num");
+	}
+	Number(int number, String type){
+		this.number = number;
+		this.type = type;
+	}
+}
+~~~  
+위 예제는 Number 인스턴스 두 개를 생성한 후, 각 인스턴스에 toString()을 호출한 결과를 출력하는 예제이다. 위 예제를 통해 서로 다른 인스턴스에 대해 toString()을 호출하면 클래스의 이름은 같아도 해시코드값이 다라다는 것을 확인할 수 있다.
