--- a/_posts/2020-07-19-도커-쿠버네티스(1).md
+++ b/_posts/2020-07-19-도커-쿠버네티스(1).md
@@ -10,12 +10,21 @@ comments: true
 # **도커(Docker)**
 도커는 리눅스 컨테이너에 여러 기능을 추가함으로써 애플리케이션을 컨테이너로서 좀더 쉽게 사용할 수 있게 만들어진 오픈소스 프로젝트이다.
 
-도커 생태계에 있는 여러 프로젝트들(도커 컴프즈, 레지스트리, 도커 머신) 등은 도커 엔진을 효율적으로 사용하기 위핸 방법론에 불과하기 때문에 핵심이 되는 것은 **도커 엔진** 이다.
-
-### 1.1 가상 머신과 도커 컨테이너
+도커 생태계에 있는 여러 프로젝트들(도커 컴프즈, 레지스트리, 도커 머신) 등은 도커 엔진을 효율적으로 사용하기 위핸 방법론에 불과하기 때문에 핵심이 되는 것은 **도커 엔진** 이다.  
+<br>
+## 1.1 가상 머신과 도커 컨테이너
 도커가 나오기전의 가상화 기술은 하이퍼바이저를 이용해 여러 개의 운영체제를 하나의 호스트에서 생성해 사용하는 방식이었다. 여러 개의 운영체제는 가상 머신이라는 단위로 구별되고, 각 가상 머신에는 우분투, Centos 등의 운영체제가 설치되어 사용된다.
 
-그러나 이런 시스템 자원을 가상화하고 독립된 공간을 생성하는 작업은 하이퍼바이저를 반드시 가처기 때문에 일반 호스트에 비해 성능의 손실이 발생한다.
+그러나 이런 시스템 자원을 가상화하고 독립된 공간을 생성하는 작업은 하이퍼바이저를 반드시 거처기 때문에 일반 호스트에 비해 성능의 손실이 발생한다.
 
-그에 반에 도커 컨테이너는 가상화된 공간을 생성하기 위해 리눅스의 자체 기능인 chroot, namespace, cgroup을 사용함으로써 프로세스 단위의 격리 환경을 만들기 때문에 성능 손실이 거의 없다. 컨테이너를 이미지로 만들어 배포하는 시간이 가상 머신에 비해 빠르며, 가상화된 공간을 사용할 때의 성능 손실도 거의 없다는 장점이 있다.
+그에 반에 도커 컨테이너는 가상화된 공간을 생성하기 위해 리눅스의 자체 기능인 chroot, namespace, cgroup을 사용함으로써 프로세스 단위의 격리 환경을 만들기 때문에 성능 손실이 거의 없다. 컨테이너를 이미지로 만들어 배포하는 시간이 가상 머신에 비해 빠르며, 가상화된 공간을 사용할 때의 성능 손실도 거의 없다는 장점이 있다.  
+<br>
+## 1.2 도커를 사용해야 하는 이유
+### 1.2.1 애플리케이션의 개발과 배포 단순화
+도커 컨테이너는 호스트OS와 달리 이 위에서 실행되는 격리된 공간이다. 따라서 컨티언 자체에 특별한 권한을 주지 않는 한, 호스트 내부에서 수많은 파일을 설치하고 수정해도 호스트OS에 영향을 주지 않는다. 즉, 독립적인 개발환경을 받을수 있다는 말이다.
+
+운영서버에 작업물을 배포하고 할때, 컨테이너를 '도커 이미지'라 불리는 패키지로 만들어 운영서버에 전달하기만 하면 된다. 관련 패키지를 설치할 필요도 없으며, 그에따른 의존성을 걱정할 필요도 없다. 개발서버의 환경과 운영서버의 환경을 똑같이 복제할 수 있기 때문에 개발/운영 환경의 통합이 가능해진다.
+
+마지막으로 도커 이미지는 가상 머신의 이미지와 달리 커널을 포함하고 있지 않기 때문에 이미지 크기가 크지 않다. 또한 도커는 이미지 내용을 레이어 단위로 구성하며, 중복되는 레이어를 재사용할 수 있어서 애플리케이션의 배포 속도가 매우 빨라진다는 장점이 있다.
+
 
