--- a/_posts/2020-07-19-도커-쿠버네티스(1).md
+++ b/_posts/2020-07-19-도커-쿠버네티스(1).md
@@ -27,4 +27,7 @@ comments: true
 
 마지막으로 도커 이미지는 가상 머신의 이미지와 달리 커널을 포함하고 있지 않기 때문에 이미지 크기가 크지 않다. 또한 도커는 이미지 내용을 레이어 단위로 구성하며, 중복되는 레이어를 재사용할 수 있어서 애플리케이션의 배포 속도가 매우 빨라진다는 장점이 있다.
 
+### 1.2.2 독립성과 확장성 증대
+모든 모듈이 하나의 소프트웨어로 이루어져 있는 모놀로그 애플리케이션과 달리 어떤 소프트웨어에 종속적이지 않고 각각의 모듈로 이루어진 마이크로 서비스는 요즈음 핫한 주제이다. 마이크로 서비스와 도커를 이용하면, 모든 모듈을 독립적으로 관리하기 때문에 언어에 종속적이지 않으며, 관리도 쉬워지고 확장성도 올라간다.
+
 
