--- a/_posts/2020-08-04-도커-쿠버네티스(2).md
+++ b/_posts/2020-08-04-도커-쿠버네티스(2).md
@@ -12,4 +12,7 @@ comments: true
 도커 엔진에서 사용하는 기본 단위는 이미지와 컨테이너이며, 이 두 가지가 핵심이다.  
 <br>
 ### 2.1.1 도커 이미지  
-이미지는 컨테이너를 생성할 때 필요한 요소이며, 가상머신을 생성할때 사용하는 iso파일과 비슷하다고 할 수 있다. 이미지는 여러 개의 계층으로 된 바이너리 파일로 존재하고, 컨테이너를 생성하고 실행할 때 읽기 전용으로 사용된다. 이미지는 도커 명령어로 내려받을 수 있으므로 별도로 설치할 필요는 없다.
+이미지는 컨테이너를 생성할 때 필요한 요소이며, 가상머신을 생성할때 사용하는 iso파일과 비슷하다고 할 수 있다. 이미지는 여러 개의 계층으로 된 바이너리 파일로 존재하고, 컨테이너를 생성하고 실행할 때 읽기 전용으로 사용된다. 이미지는 도커 명령어로 내려받을 수 있으므로 별도로 설치할 필요는 없다.  
+<br>
+### 2.1.2 도커 컨테이너
+도커 이미지는 Ubuntu, CentOS등 기본적인 리눅스 운영체제부터 Apache, Tomcat 등의 웹 애플리케이션, 하둡, 스파크 스톰등의 빅데이터 분석 도구까지 여러 종류가 있다. 이러한 이미지로 컨테이너를 생성하면 해당 이미지의 목적에 맞는 파일이 들어 있는 파일시스템과 격리된 시스템 자원 및 네트워크를 사용할 수 있는 독립된 공간이 생성되고, 이를 도커 컨테이너라 한다.
