람다(2) - 함수형 인터페이스

--- a/_posts/2021-02-27-java-람다.md
+++ b/_posts/2021-02-27-java-람다.md
@@ -31,4 +31,35 @@ method (paramter) {
 람다
 (paramter) -> { body }
 ```  
-람다식에 선언된 매개변수의 타입이 추론 가능한 경우 타입을 생략할 수 있으며 대부분 생략 가능하다.
+람다식에 선언된 매개변수의 타입이 추론 가능한 경우 타입을 생략할 수 있으며 대부분 생략 가능하다.   
+
+### 3. 함수형 인터페이스  
+람다식은 메서드와 동등한 것으로 보이지만, 사실은 익명 클래스의 객체와 동등하다.
+```java
+(String a, String b) -> a.equals(b) ? a : b
+
+new Object() {
+    String result (String a, String b) {
+        return a.equals(b) ? a : b;
+    }
+}
+```  
+아래와 같은 인터페이스와 그 구현체가 있다고 생각하자.
+```java
+interface TestInterface {
+    public abstract String result(String a, String b);
+}
+
+TestInterface t = new TestInterface() {
+                        public String result (String a, String b) {
+                            return a.equals(b) ? a : b;
+                        }
+};
+String r = t.result("a", "b"); // result is "b"
+```
+result() 라는 메서드는 '(String a, String b) -> a.equals(b) ? a : b' 라는 람다식과 동일하다. 따라서 아래와 같은 구현체로 대체할 수 있다.
+```java
+TestInterface t = (String a, String b) -> a.equals(b) ? a : b;
+String r = t.result("a", "b"); // result is "b"
+```  
+이처럼 익명 객체의 메서드와 람다식의 매개변수의 타입과 갯수, 그리고 반환값이 일치하면 인터페이스를 구현한 익명 객체를 람다식으로 대체 가능하다. 
